--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -7,7 +7,7 @@
     "access": "public"
   },
   "scripts": {
-    "vite": "vite",
+    "vite": "vite --host",
     "preview": "vite preview",
     "build": "vite build",
     "format": "prettier --write '**/*.{ts,tsx}'",
@@ -25,7 +25,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-grid-areas": "^0.1.1",
     "typescript": "^5.4.5",
     "vite": "^5.2.8",
     "vite-tsconfig-paths": "^4.3.2"
