--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -7,7 +7,7 @@
     "access": "public"
   },
   "scripts": {
-    "vite": "vite --host",
+    "vite": "vite",
     "preview": "vite preview",
     "build": "vite build",
     "format": "prettier --write '**/*.{ts,tsx}'",
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@tw-material/theme": "^1.1.8",
     "@types/node": "^20.12.7",
-    "@types/react": "^18.2.77",
+    "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
@@ -26,7 +26,7 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
-    "vite": "^5.2.8",
+    "vite": "^5.2.9",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "dependencies": {
