--- a/packages/fb/package.json
+++ b/packages/fb/package.json
@@ -1,108 +1,101 @@
 {
-  "name": "@tw-material/file-browser",
-  "version": "1.0.20",
-  "description": "A File Browser component for React",
-  "license": "MIT",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.mts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.mts",
-      "import": "./dist/index.mjs"
-    }
-  },
-  "files": [
-    "dist"
-  ],
-  "engines": {
-    "node": ">=18"
-  },
-  "sideEffects": false,
-  "scripts": {
-    "build": "tsup",
-    "build:watch": "tsup --watch",
-    "typecheck": "tsc --noEmit",
-    "format": "prettier --write '**/*.{ts,tsx}'",
-    "format-check": "prettier --check '**/*.{ts,tsx}",
-    "prepublishOnly": "pnpm run build",
-    "publish": "pnpm publish --access public --no-git-checks",
-    "update": "pnpm up --latest"
-  },
-  "peerDependencies": {
-    "@tw-material/react": ">=1",
-    "@tw-material/system": ">=1",
-    "@tw-material/theme": ">=1",
-    "framer-motion": ">=10",
-    "react": ">=18",
-    "react-dom": ">=18"
-  },
-  "dependencies": {
-    "@floating-ui/react": "^0.26.23",
-    "@nextui-org/use-safe-layout-effect": "^2.0.6",
-    "@react-aria/focus": "^3.18.2",
-    "@react-aria/interactions": "^3.22.2",
-    "@react-aria/utils": "^3.25.2",
-    "@reduxjs/toolkit": "^2.2.7",
-    "@tw-material/react-utils": "^1.1.3",
-    "@tw-material/shared-utils": "^1.1.2",
-    "@tw-material/use-long-press": "^1.0.0",
-    "@tw-material/use-press": "^1.0.0",
-    "clsx": "^2.1.1",
-    "deepmerge": "^4.3.1",
-    "exact-trie": "^1.0.13",
-    "fast-sort": "^3.4.1",
-    "filesize": "^10.1.6",
-    "fuzzy-search": "^3.2.1",
-    "hotkeys-js": "^3.13.7",
-    "immer": "10.1.1",
-    "react-click-away-listener": "^2.2.3",
-    "react-intl": "^6.6.8",
-    "react-redux": "^9.1.2",
-    "react-virtuoso": "^4.10.4",
-    "redux-watch": "^1.2.0",
-    "shortid": "^2.2.16",
-    "tailwind-merge": "^2.5.2",
-    "tsdef": "^0.0.14"
-  },
-  "devDependencies": {
-    "@floating-ui/react-dom": "^2.1.1",
-    "@iconify/json": "^2.2.248",
-    "@react-types/shared": "^3.24.1",
-    "@svgr/core": "^8.1.0",
-    "@svgr/plugin-jsx": "^8.1.0",
-    "@tw-material/react": "^1.1.21",
-    "@tw-material/system": "^1.1.1",
-    "@tw-material/theme": "^1.1.12",
-    "@types/fuzzy-search": "^2.1.5",
-    "@types/memoizee": "^0.4.11",
-    "@types/node": "^22.5.5",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-redux": "^7.1.33",
-    "@types/redux-watch": "^1.1.2",
-    "@types/shortid": "^0.0.32",
-    "cross-env": "^7.0.3",
-    "framer-motion": "^11.5.4",
-    "prettier": "^3.3.3",
-    "process": "^0.11.10",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-is": "^18.3.1",
-    "rimraf": "^6.0.1",
-    "size-limit": "^11.1.5",
-    "tsup": "^8.2.4",
-    "typescript": "^5.6.2",
-    "unplugin-icons": "^0.19.3"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/divyam234/tw-file-browser.git",
-    "directory": "packages/fb"
-  },
-  "keywords": [
-    "file",
-    "file-dialog",
-    "file-browser",
-    "react-component"
-  ]
+	"name": "@tw-material/file-browser",
+	"version": "1.0.21",
+	"description": "A File Browser component for React",
+	"license": "MIT",
+	"module": "dist/index.mjs",
+	"types": "dist/index.d.mts",
+	"exports": {
+		".": {
+			"types": "./dist/index.d.mts",
+			"import": "./dist/index.mjs"
+		}
+	},
+	"files": ["dist"],
+	"engines": {
+		"node": ">=18"
+	},
+	"sideEffects": false,
+	"scripts": {
+		"build": "tsup",
+		"build:watch": "tsup --watch",
+		"typecheck": "tsc --noEmit",
+		"format": "prettier --write '**/*.{ts,tsx}'",
+		"format-check": "prettier --check '**/*.{ts,tsx}",
+		"prepublishOnly": "pnpm run build",
+		"publish": "pnpm publish --access public --no-git-checks",
+		"update": "pnpm up --latest"
+	},
+	"peerDependencies": {
+		"@tw-material/react": ">=1",
+		"@tw-material/system": ">=1",
+		"@tw-material/theme": ">=1",
+		"framer-motion": ">=10",
+		"react": ">=18",
+		"react-dom": ">=18"
+	},
+	"dependencies": {
+		"@floating-ui/react": "^0.26.23",
+		"@nextui-org/use-safe-layout-effect": "^2.0.6",
+		"@react-aria/focus": "^3.18.2",
+		"@react-aria/interactions": "^3.22.2",
+		"@react-aria/utils": "^3.25.2",
+		"@reduxjs/toolkit": "^2.2.7",
+		"@tw-material/react-utils": "^1.1.3",
+		"@tw-material/shared-utils": "^1.1.2",
+		"@tw-material/use-long-press": "^1.0.0",
+		"@tw-material/use-press": "^1.0.0",
+		"clsx": "^2.1.1",
+		"deepmerge": "^4.3.1",
+		"exact-trie": "^1.0.13",
+		"fast-sort": "^3.4.1",
+		"filesize": "^10.1.6",
+		"fuzzy-search": "^3.2.1",
+		"hotkeys-js": "^3.13.7",
+		"immer": "10.1.1",
+		"react-click-away-listener": "^2.2.3",
+		"react-intl": "^6.6.8",
+		"react-redux": "^9.1.2",
+		"react-virtuoso": "^4.10.4",
+		"redux-watch": "^1.2.0",
+		"shortid": "^2.2.16",
+		"tailwind-merge": "^2.5.2",
+		"tsdef": "^0.0.14"
+	},
+	"devDependencies": {
+		"@floating-ui/react-dom": "^2.1.1",
+		"@iconify/json": "^2.2.248",
+		"@react-types/shared": "^3.24.1",
+		"@svgr/core": "^8.1.0",
+		"@svgr/plugin-jsx": "^8.1.0",
+		"@tw-material/react": "^1.1.21",
+		"@tw-material/system": "^1.1.1",
+		"@tw-material/theme": "^1.1.12",
+		"@types/fuzzy-search": "^2.1.5",
+		"@types/memoizee": "^0.4.11",
+		"@types/node": "^22.5.5",
+		"@types/react": "^18.3.5",
+		"@types/react-dom": "^18.3.0",
+		"@types/react-redux": "^7.1.33",
+		"@types/redux-watch": "^1.1.2",
+		"@types/shortid": "^0.0.32",
+		"cross-env": "^7.0.3",
+		"framer-motion": "^11.5.4",
+		"prettier": "^3.3.3",
+		"process": "^0.11.10",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-is": "^18.3.1",
+		"rimraf": "^6.0.1",
+		"size-limit": "^11.1.5",
+		"tsup": "^8.2.4",
+		"typescript": "^5.6.2",
+		"unplugin-icons": "^0.19.3"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/divyam234/tw-file-browser.git",
+		"directory": "packages/fb"
+	},
+	"keywords": ["file", "file-dialog", "file-browser", "react-component"]
 }
