--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "fb-example",
-  "engines": {
-    "node": ">=18"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "scripts": {
-    "vite": "vite",
-    "preview": "vite preview",
-    "build": "vite build",
-    "format": "prettier --write '**/*.{ts,tsx}'",
-    "format-check": "prettier --check '**/*.{ts,tsx}",
-    "update": "pnpm up --latest"
-  },
-  "devDependencies": {
-    "@tw-material/theme": "^1.1.9",
-    "@types/node": "^20.12.11",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.11",
-    "vite-tsconfig-paths": "^4.3.2"
-  },
-  "dependencies": {
-    "@tw-material/file-browser": "workspace:^"
-  }
+	"name": "fb-example",
+	"engines": {
+		"node": ">=18"
+	},
+	"publishConfig": {
+		"access": "public"
+	},
+	"scripts": {
+		"vite": "vite --host 0.0.0.0",
+		"preview": "vite preview",
+		"build": "vite build",
+		"format": "prettier --write '**/*.{ts,tsx}'",
+		"format-check": "prettier --check '**/*.{ts,tsx}",
+		"update": "pnpm up --latest"
+	},
+	"devDependencies": {
+		"@tw-material/theme": "^1.1.9",
+		"@types/node": "^20.12.11",
+		"@types/react": "^18.3.1",
+		"@types/react-dom": "^18.3.0",
+		"@vitejs/plugin-react": "^4.2.1",
+		"autoprefixer": "^10.4.19",
+		"postcss": "^8.4.38",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"tailwindcss": "^3.4.3",
+		"typescript": "^5.4.5",
+		"vite": "^5.2.11",
+		"vite-tsconfig-paths": "^4.3.2"
+	},
+	"dependencies": {
+		"@tw-material/file-browser": "workspace:^"
+	}
 }
