--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 	"pnpm": {
 		"overrides": {
 			"react": "^18.3.1",
-			"react-dom": "^18.3.1",
-			"@types/react": "^18.3.5"
+			"react-dom": "^18.3.1"
 		}
 	}
 }
