--- a/packages/fb/package.json
+++ b/packages/fb/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tw-material/file-browser",
-	"version": "1.0.28",
+	"version": "1.0.31",
 	"description": "A File Browser component for React",
 	"license": "MIT",
 	"module": "dist/index.mjs",
@@ -11,7 +11,9 @@
 			"import": "./dist/index.mjs"
 		}
 	},
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"engines": {
 		"node": ">=18"
 	},
@@ -36,10 +38,11 @@
 	},
 	"dependencies": {
 		"@nextui-org/use-safe-layout-effect": "^2.0.6",
-		"@react-aria/focus": "^3.18.2",
-		"@react-aria/interactions": "^3.22.2",
-		"@react-aria/utils": "^3.25.2",
-		"@reduxjs/toolkit": "^2.2.7",
+		"@react-aria/focus": "^3.18.4",
+		"@react-aria/interactions": "^3.22.4",
+		"@react-aria/utils": "^3.25.3",
+		"@react-hook/media-query": "^1.1.1",
+		"@reduxjs/toolkit": "^2.3.0",
 		"@tw-material/react-utils": "^1.1.3",
 		"@tw-material/shared-utils": "^1.1.2",
 		"@tw-material/use-long-press": "^1.0.0",
@@ -52,48 +55,56 @@
 		"fuzzy-search": "^3.2.1",
 		"hotkeys-js": "^3.13.7",
 		"immer": "10.1.1",
+		"lodash.debounce": "^4.0.8",
 		"react-click-away-listener": "^2.2.3",
-		"react-intl": "^6.6.8",
+		"react-intl": "^6.8.7",
 		"react-redux": "^9.1.2",
-		"react-virtuoso": "^4.10.4",
+		"react-virtuoso": "^4.12.0",
 		"redux-watch": "^1.2.0",
 		"shortid": "^2.2.16",
-		"tailwind-merge": "^2.5.2",
-		"tsdef": "^0.0.14"
+		"tailwind-merge": "^2.5.4",
+		"tsdef": "^0.0.14",
+		"vaul": "^1.1.1"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.249",
-		"@react-types/shared": "^3.24.1",
+		"@iconify/json": "^2.2.269",
+		"@react-types/shared": "^3.25.0",
 		"@svgr/core": "^8.1.0",
 		"@svgr/plugin-jsx": "^8.1.0",
 		"@tw-material/react": "^1.1.21",
 		"@tw-material/system": "^1.1.1",
 		"@tw-material/theme": "^1.1.12",
 		"@types/fuzzy-search": "^2.1.5",
+		"@types/lodash.debounce": "^4.0.9",
 		"@types/memoizee": "^0.4.11",
-		"@types/node": "^22.5.5",
-		"@types/react": "^18.3.6",
-		"@types/react-dom": "^18.3.0",
-		"@types/react-redux": "^7.1.33",
+		"@types/node": "^22.9.0",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"@types/react-redux": "^7.1.34",
 		"@types/redux-watch": "^1.1.2",
-		"@types/shortid": "^0.0.32",
+		"@types/shortid": "^2.2.0",
 		"cross-env": "^7.0.3",
-		"framer-motion": "^11.5.4",
+		"framer-motion": "^11.11.11",
 		"prettier": "^3.3.3",
 		"process": "^0.11.10",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-is": "^18.3.1",
 		"rimraf": "^6.0.1",
-		"size-limit": "^11.1.5",
-		"tsup": "^8.2.4",
-		"typescript": "^5.6.2",
-		"unplugin-icons": "^0.19.3"
+		"size-limit": "^11.1.6",
+		"tsup": "^8.3.5",
+		"typescript": "^5.6.3",
+		"unplugin-icons": "^0.20.1"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/divyam234/tw-file-browser.git",
 		"directory": "packages/fb"
 	},
-	"keywords": ["file", "file-dialog", "file-browser", "react-component"]
+	"keywords": [
+		"file",
+		"file-dialog",
+		"file-browser",
+		"react-component"
+	]
 }
